--- a/AppleTestes.Android/Properties/AndroidManifest.xml
+++ b/AppleTestes.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.appletestes" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.wpasolutions.consultacep" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="29" />
-	<application android:label="AppleTestes.Android" android:theme="@style/MainTheme"></application>
+	<application android:label="Consulta Cidade CEP" android:theme="@style/MainTheme" android:icon="@drawable/web_hi_res_512"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
