--- a/AppleTestes.Android/AppleTestes.Android.csproj
+++ b/AppleTestes.Android/AppleTestes.Android.csproj
@@ -61,6 +61,7 @@
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -76,6 +77,7 @@
     <Compile Include="RenderAndroidPerson\RenderEntryAndroidPerson.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\ServiceAPIAndroid.cs" />
     <Compile Include="Splash_Screem.cs" />
   </ItemGroup>
   <ItemGroup>
